--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -20,19 +20,15 @@
   <groupId>org.apache.whirr</groupId>
   <artifactId>whirr-build-tools</artifactId>
   <packaging>jar</packaging>
-  <version>0.8.0-SNAPSHOT</version>
+  <version>0.8.0-brooklyn.1</version>
   <name>Apache Whirr Build Tools</name>
   <distributionManagement>
-    <repository>
-      <id>apache.staging.https</id>
-      <name>Nexus Staging Repo</name>
-      <url>https://repository.apache.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    <site>
-      <id>apache.website</id>
-      <url>scpexe://people.apache.org/www/whirr.apache.org/docs/${project.version}</url>
-    </site>
- </distributionManagement>
+     <repository> 
+      <id>cloudsoft-release</id> 
+      <name>cloudsoft-release</name> 
+      <url>http://ccweb.cloudsoftcorp.com/maven/cloudsoft-release/</url> 
+    </repository> 
+  </distributionManagement>
   <profiles>
     <profile>
       <!-- Used only when cutting a full release.  Configures the deploy plugin to mark
