--- a/platforms/karaf/pom.xml
+++ b/platforms/karaf/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.whirr</groupId>
     <artifactId>whirr</artifactId>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.8.0-brooklyn.1</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
