--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
   <groupId>org.apache.whirr</groupId>
   <artifactId>whirr</artifactId>
-  <version>0.8.0-SNAPSHOT</version>
+  <version>0.8.0-brooklyn.1</version>
   <packaging>pom</packaging>
 
   <name>Whirr</name>
@@ -634,26 +634,22 @@
       <url>https://repository.cloudera.com/content/repositories/releases/</url>
     </repository>
   </repositories>
+
   <pluginRepositories>
     <pluginRepository>
       <id>apache-snapshots</id>
       <url>https://repository.apache.org/content/repositories/snapshots</url>
     </pluginRepository>
   </pluginRepositories>
+
   <distributionManagement>
-    <repository>
-      <id>apache.staging.https</id>
-      <name>Nexus Staging Repo</name>
-      <url>https://repository.apache.org/service/local/staging/deploy/maven2/
-      </url>
-    </repository>
-    <site>
-      <id>apache.website</id>
-      <url>
-        scpexe://people.apache.org/www/whirr.apache.org/docs/${project.version}
-      </url>
-    </site>
+    <repository> 
+      <id>cloudsoft-release</id> 
+      <name>cloudsoft-release</name> 
+      <url>http://ccweb.cloudsoftcorp.com/maven/cloudsoft-release/</url> 
+    </repository> 
   </distributionManagement>
+
   <profiles>
     <profile>
       <!-- Used only when cutting a full release.  Configures the deploy plugin to mark
