--- a/services/hbase/pom.xml
+++ b/services/hbase/pom.xml
@@ -20,13 +20,13 @@
   <parent>
     <groupId>org.apache.whirr</groupId>
     <artifactId>whirr</artifactId>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.8.0-brooklyn.1</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <groupId>org.apache.whirr</groupId>
   <artifactId>whirr-hbase</artifactId>
   <packaging>bundle</packaging>
-  <version>0.8.0-SNAPSHOT</version>
+  <version>0.8.0-brooklyn.1</version>
   <name>Apache Whirr HBase</name>
   <properties>
     <osgi.import>
